<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".HomeSerializable">

    <TextView
        style="@style/textjudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_serializable"
        android:textAllCaps="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/text_name"
        android:textColorHint="@color/putih">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nameser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/abu"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/text_email"
        android:textColorHint="@color/putih">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_emailser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/abu"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/text_phone"
        android:textColorHint="@color/putih">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phoneser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/abu"
            android:inputType="phone"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/text_address"
        android:textColorHint="@color/putih">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_addressser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/abu"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/text_age"
        android:textColorHint="@color/putih">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_ageser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/abu"
            android:inputType="number"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_saveser"
        style="@style/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_save" />

</LinearLayout>