<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context=".HomeBundle">

    <TextView
        style="@style/textjudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_bundle"
        android:textAllCaps="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/text_name"
        android:textColorHint="@color/putih">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_namebun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/abu"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/text_tahunlahir"
        android:textColorHint="@color/putih">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_tahunbun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/abu"
            android:inputType="number"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_savebun"
        style="@style/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_save" />

</LinearLayout>